# codex-switch

./: AGENTS.md  README.md  package-lock.json  package.json
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  codex.rs  crypto.rs  lib.rs  main.rs  models.rs  quota.rs  store.rs
