[package]
name = "codex-switch-app"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codex_switch_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
sysinfo = "0.37"
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"
